# reservation

./: .env  Cargo.toml  README.md  docker-compose.yaml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: mod.rs  reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_query.rs  reservation_status.rs
migrations/: 20250115095326_init.down.sql  20250115095326_init.up.sql  20250115112312_reservation.down.sql  20250115112312_reservation.up.sql  20250116033441_reservation_trigger.down.sql  20250116033441_reservation_trigger.up.sql  20250605073816_reservation_func.down.sql  20250605073816_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: lib.rs  manage.rs
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: lib.rs  main.rs  service.rs
sqlx-db-tester/: Cargo.toml
sqlx-db-tester/migrations/: 20250819023212_test_db.up.sql
sqlx-db-tester/src/: lib.rs
