[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
prost-types = "0.13"
thiserror = "2.0.11"
tonic = { version = "0.12.3", features = ["gzip"] }
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"]}
regex = "1.11.1"
lazy_static = "1.5.0"
derive_builder = "0.20.2"

[build-dependencies]
tonic-build = "0.12.3"
