[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.85"
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"]}

[dev-dependencies]
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
