[package]
name = "sqlx-db-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
tokio = { version = "1.21.2", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.2.1", features = ["v4"] }
